# barcode

./: .gitignore  LICENSE  README.md  environment_arm.yml  environment_x86.yml  pyproject.toml  requirements.txt
ZnCu_data/: 0,1M at 30%A - 1.txt  0,1M at 70%.txt  0,1M at 80%A - 1.txt  0,1M at 90%.txt  0,5M at 30%A - 2.txt  0,5M at 80%A - 2.txt  0,5M at 90% - 2.txt  5M at 30%.txt  5M at 50%A - 1.txt  5M at 90%A - 2.txt  Control - 1.txt  Control - 2.txt
afm_tda_tools/: __main__.py  config.py  pipeline.py
afm_tda_tools/analyzers/: __init__.py  autocorrelation.py  base.py  bottleneck.py  min_max.py  persistence.py
afm_tda_tools/data/: __init__.py  data.py  data_converter.py
code/: AFM_analize_folder.py  __main__.py  convert.py  logic.py
example_data_from_article/: 0,1M at 50%.txt  0,5M at 50% - 1.txt  0,5M at 70% - 3.txt  5M at 70%A - 1.txt  5M at 80%A - 3.txt  Control - 3.txt
example_files/: PE11_1.txt  PE11_2.txt  PE11_3.txt  PE12_1.txt  PE12_2.txt  PE12_3.txt  PE13_1.txt  PE13_2.txt  PE13_3.txt  PE14_1.txt  PE14_2.txt  PE14_3.txt  PE15aist1.txt  PE15aist2.txt  PE15aist3.txt  PE16aist1.txt  PE16aist2.txt  PE16aist3.txt  PE17aist1.txt  PE17aist2.txt  PE17aist3.txt  PE18aist1.txt  PE18aist2.txt  PE18aist3.txt  PE19_1.txt  PE19_2.txt  PE19_3.txt  PE1_1.txt  PE1_2.txt  PE1_3.txt  PE20_1.txt  PE20_2.txt  PE20_3.txt  PE21_1.txt  PE21_2.txt  PE21_3.txt  PE22_1.txt  PE22_3.txt  PE22_4.txt
src/: AFM_analize_folder.py  Save_barcode_as_csv_2.py  __main__.py  config.json  convert.py  logic.py
test/: conftest.py  test_afm_analize_folder.py  test_convert.py  test_logic.py
